@@ -8,6 +8,11 @@
     <artifactId>htl-sew-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- Jetty webapps -->
+    <packaging>war</packaging>
+    <name>htl-sew-java webapp</name>
+    <url>http://localhost</url>
+
     <properties>
         <java.version>15</java.version>
         <javafx.version>13</javafx.version>
@@ -32,6 +37,24 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.toolchain</groupId>
+            <artifactId>jetty-jakarta-servlet-api</artifactId>
+            <version>5.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>apache-jstl</artifactId>
+            <version>11.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -44,7 +67,6 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -53,12 +75,16 @@
                 <version>0.0.4</version>
                 <configuration>
                     <mainClass>patterns.mvvm.TicTacToeDemo</mainClass>
-                    <options>
-                        <option>--enable-preview</option>
-                    </options>
                 </configuration>
             </plugin>
-        </plugins>
+                <!-- Jetty Plugin. Default port is 8080 -->
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>11.0.0</version>
+                </plugin>
+            </plugins>
+            <finalName>htl-sew-java-web</finalName>
     </build>
 
 </project>
